Mango/Compiler/lex_yacc/y.output
State 1 conflicts: 1 shift/reduce
State 159 conflicts: 1 shift/reduce
State 186 conflicts: 1 shift/reduce


Grammar

    0 $accept: compile_util $end

    1 compile_util: /* empty */
    2             | definition_list

    3 definition_list: definition
    4                | definition_list definition

    5 definition: class_definition
    6           | declare_struct
    7           | top_statement

    8 annotation_if: /* empty */
    9              | ANNOTATION_IF LP expression RP

   10 declare_struct: annotation_if DECLARE STRUCT IDENTIFIER LC IDENTIFIER COLON STRING_LITERAL COMMA IDENTIFIER COLON identifier_list RC
   11               | annotation_if DECLARE STRUCT IDENTIFIER LC IDENTIFIER COLON identifier_list COMMA IDENTIFIER COLON STRING_LITERAL RC

   12 identifier_list: IDENTIFIER
   13                | identifier_list COMMA IDENTIFIER

   14 @1: /* empty */

   15 class_definition: annotation_if CLASS IDENTIFIER COLON IDENTIFIER LC @1 RC

   16 @2: /* empty */

   17 class_definition: annotation_if CLASS IDENTIFIER COLON IDENTIFIER LC @2 member_definition_list RC

   18 @3: /* empty */

   19 class_definition: annotation_if CLASS IDENTIFIER COLON IDENTIFIER LT protocol_list GT LC @3 RC

   20 @4: /* empty */

   21 class_definition: annotation_if CLASS IDENTIFIER COLON IDENTIFIER LT protocol_list GT LC @4 member_definition_list RC

   22 protocol_list: IDENTIFIER
   23              | protocol_list COMMA IDENTIFIER

   24 property_definition: annotation_if PROPERTY LP property_modifier_list RP type_specifier IDENTIFIER SEMICOLON
   25                    | annotation_if PROPERTY LP RP type_specifier IDENTIFIER SEMICOLON

   26 property_modifier_list: property_modifier
   27                       | property_modifier_list COMMA property_modifier

   28 property_modifier: property_rc_modifier
   29                  | property_atomic_modifier

   30 property_rc_modifier: WEAK
   31                     | STRONG
   32                     | COPY
   33                     | ASSIGN_MEM

   34 property_atomic_modifier: NONATOMIC
   35                         | ATOMIC

   36 type_specifier: VOID
   37               | BOOL_
   38               | INT
   39               | U_INT
   40               | DOUBLE
   41               | C_STRING
   42               | ID
   43               | CLASS_
   44               | SEL_
   45               | BLOCK
   46               | POINTER
   47               | IDENTIFIER ASTERISK
   48               | STRUCT IDENTIFIER
   49               | IDENTIFIER

   50 method_definition: instance_method_definition
   51                  | class_method_definition

   52 instance_method_definition: annotation_if SUB LP type_specifier RP method_name block_statement

   53 class_method_definition: annotation_if ADD LP type_specifier RP method_name block_statement

   54 method_name: method_name_1
   55            | method_name_2

   56 method_name_1: IDENTIFIER

   57 method_name_2: method_name_item
   58              | method_name_2 method_name_item

   59 method_name_item: IDENTIFIER COLON LP type_specifier RP IDENTIFIER

   60 member_definition: property_definition
   61                  | method_definition

   62 member_definition_list: member_definition
   63                       | member_definition_list member_definition

   64 selector: selector_1
   65         | selector_2

   66 selector_1: IDENTIFIER

   67 selector_2: IDENTIFIER COLON
   68           | selector_2 IDENTIFIER COLON

   69 expression: assign_expression

   70 assign_expression: ternary_operator_expression
   71                  | primary_expression assignment_operator ternary_operator_expression

   72 assignment_operator: ASSIGN
   73                    | SUB_ASSIGN
   74                    | ADD_ASSIGN
   75                    | ASTERISK_ASSIGN
   76                    | DIV_ASSIGN
   77                    | MOD_ASSIGN

   78 ternary_operator_expression: logic_or_expression
   79                            | logic_or_expression QUESTION ternary_operator_expression COLON ternary_operator_expression
   80                            | logic_or_expression QUESTION COLON ternary_operator_expression

   81 logic_or_expression: logic_and_expression
   82                    | logic_or_expression OR logic_and_expression

   83 logic_and_expression: equality_expression
   84                     | logic_and_expression AND equality_expression

   85 equality_expression: relational_expression
   86                    | equality_expression EQ relational_expression
   87                    | equality_expression NE relational_expression

   88 relational_expression: additive_expression
   89                      | relational_expression LT additive_expression
   90                      | relational_expression LE additive_expression
   91                      | relational_expression GT additive_expression
   92                      | relational_expression GE additive_expression

   93 additive_expression: multiplication_expression
   94                    | additive_expression ADD multiplication_expression
   95                    | additive_expression SUB multiplication_expression

   96 multiplication_expression: unary_expression
   97                          | multiplication_expression ASTERISK unary_expression
   98                          | multiplication_expression DIV unary_expression
   99                          | multiplication_expression MOD unary_expression

  100 unary_expression: postfix_expression
  101                 | NOT unary_expression
  102                 | SUB unary_expression

  103 postfix_expression: primary_expression
  104                   | primary_expression INCREMENT
  105                   | primary_expression DECREMENT

  106 expression_list: assign_expression
  107                | expression_list COMMA assign_expression

  108 dic_entry: primary_expression COLON primary_expression

  109 dic_entry_list: dic_entry
  110               | dic_entry_list COMMA dic_entry

  111 dic: AT LC dic_entry_list RC
  112    | AT LC RC

  113 struct_entry: IDENTIFIER COLON primary_expression

  114 struct_entry_list: struct_entry
  115                  | struct_entry_list COMMA struct_entry

  116 struct_literal: LC struct_entry_list RC

  117 primary_expression: IDENTIFIER
  118                   | primary_expression DOT IDENTIFIER
  119                   | primary_expression DOT selector LP RP
  120                   | primary_expression DOT selector LP expression_list RP
  121                   | IDENTIFIER LP RP
  122                   | IDENTIFIER LP expression_list RP
  123                   | LP expression RP
  124                   | primary_expression LB expression RB
  125                   | YES_
  126                   | NO_
  127                   | INTETER_LITERAL
  128                   | DOUBLE_LITERAL
  129                   | STRING_LITERAL
  130                   | NIL
  131                   | NULL_
  132                   | SELECTOR LP selector RP
  133                   | AT INTETER_LITERAL
  134                   | AT DOUBLE_LITERAL
  135                   | AT STRING_LITERAL
  136                   | AT YES_
  137                   | AT NO_
  138                   | SELF
  139                   | SUPER
  140                   | AT LP expression RP
  141                   | AT LB expression_list RB
  142                   | AT LB RB
  143                   | dic
  144                   | struct_literal
  145                   | block_body

  146 block_body: POWER type_specifier LP RP block_statement
  147           | POWER type_specifier block_statement
  148           | POWER type_specifier LP function_param_list RP block_statement
  149           | POWER LP RP block_statement
  150           | POWER block_statement
  151           | POWER LP function_param_list RP block_statement

  152 function_param_list: function_param
  153                    | function_param_list COMMA function_param

  154 function_param: type_specifier IDENTIFIER

  155 declaration_statement: declaration SEMICOLON

  156 declaration: type_specifier IDENTIFIER
  157            | type_specifier IDENTIFIER ASSIGN expression

  158 if_statement: IF LP expression RP block_statement
  159             | IF LP expression RP block_statement ELSE block_statement
  160             | IF LP expression RP block_statement else_if_list
  161             | IF LP expression RP block_statement else_if_list ELSE block_statement

  162 else_if_list: else_if
  163             | else_if_list else_if

  164 else_if: ELSE IF LP expression RP block_statement

  165 switch_statement: SWITCH LP expression RP LC case_list default_opt RC

  166 case_list: one_case
  167          | case_list one_case

  168 one_case: CASE expression COLON block_statement

  169 default_opt: /* empty */
  170            | DEFAULT COLON block_statement

  171 expression_opt: /* empty */
  172               | expression

  173 for_statement: FOR LP expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RP block_statement
  174              | FOR LP declaration SEMICOLON expression_opt SEMICOLON expression_opt RP block_statement

  175 while_statement: WHILE LP expression RP block_statement

  176 do_while_statement: DO block_statement WHILE LP expression RP SEMICOLON

  177 foreach_statement: FOR LP type_specifier IDENTIFIER IN expression RP block_statement
  178                  | FOR LP IDENTIFIER IN expression RP block_statement

  179 continue_statement: CONTINUE SEMICOLON

  180 break_statement: BREAK SEMICOLON

  181 return_statement: RETURN expression_opt SEMICOLON

  182 expression_statement: expression SEMICOLON

  183 @5: /* empty */

  184 block_statement: LC @5 RC

  185 @6: /* empty */

  186 block_statement: LC @6 statement_list RC

  187 statement_list: statement
  188               | statement_list statement

  189 statement: declaration_statement
  190          | if_statement
  191          | switch_statement
  192          | for_statement
  193          | foreach_statement
  194          | while_statement
  195          | do_while_statement
  196          | break_statement
  197          | continue_statement
  198          | return_statement
  199          | expression_statement

  200 top_statement: declaration_statement
  201              | if_statement
  202              | switch_statement
  203              | for_statement
  204              | foreach_statement
  205              | while_statement
  206              | do_while_statement
  207              | expression_statement


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 10 11 12 13 15 17 19 21 22 23 24 25 47 48 49 56 59
    66 67 68 113 117 118 121 122 154 156 157 177 178
DOUBLE_LITERAL (259) 128 134
STRING_LITERAL (260) 10 11 129 135
INTETER_LITERAL (261) 127 133
SELF (262) 138
SUPER (263) 139
NIL (264) 130
NULL_ (265) 131
YES_ (266) 125 136
NO_ (267) 126 137
COLON (268) 10 11 15 17 19 21 59 67 68 79 80 108 113 168 170
SEMICOLON (269) 24 25 155 173 174 176 179 180 181 182
COMMA (270) 10 11 13 23 27 107 110 115 153
LP (271) 9 24 25 52 53 59 119 120 121 122 123 132 140 146 148 149 151
    158 159 160 161 164 165 173 174 175 176 177 178
RP (272) 9 24 25 52 53 59 119 120 121 122 123 132 140 146 148 149 151
    158 159 160 161 164 165 173 174 175 176 177 178
LB (273) 124 141 142
RB (274) 124 141 142
LC (275) 10 11 15 17 19 21 111 112 116 165 184 186
RC (276) 10 11 15 17 19 21 111 112 116 165 184 186
QUESTION (277) 79 80
DOT (278) 118 119 120
ASSIGN (279) 72 157
AT (280) 111 112 133 134 135 136 137 140 141 142
POWER (281) 146 147 148 149 150 151
AND (282) 84
OR (283) 82
NOT (284) 101
EQ (285) 86
NE (286) 87
LT (287) 19 21 89
LE (288) 90
GT (289) 19 21 91
GE (290) 92
SUB (291) 52 95 102
SUB_ASSIGN (292) 73
ADD (293) 53 94
ADD_ASSIGN (294) 74
ASTERISK_ASSIGN (295) 75
DIV (296) 98
DIV_ASSIGN (297) 76
MOD (298) 99
MOD_ASSIGN (299) 77
INCREMENT (300) 104
DECREMENT (301) 105
ANNOTATION_IF (302) 9
CLASS (303) 15 17 19 21
STRUCT (304) 10 11 48
DECLARE (305) 10 11
SELECTOR (306) 132
RETURN (307) 181
IF (308) 158 159 160 161 164
ELSE (309) 159 161 164
FOR (310) 173 174 177 178
IN (311) 177 178
WHILE (312) 175 176
DO (313) 176
SWITCH (314) 165
CASE (315) 168
DEFAULT (316) 170
BREAK (317) 180
CONTINUE (318) 179
PROPERTY (319) 24 25
WEAK (320) 30
STRONG (321) 31
COPY (322) 32
ASSIGN_MEM (323) 33
NONATOMIC (324) 34
ATOMIC (325) 35
ASTERISK (326) 47 97
VOID (327) 36
BOOL_ (328) 37
U_INT (329) 39
INT (330) 38
DOUBLE (331) 40
C_STRING (332) 41
CLASS_ (333) 43
SEL_ (334) 44
ID (335) 42
POINTER (336) 46
BLOCK (337) 45


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
compile_util (84)
    on left: 1 2, on right: 0
definition_list (85)
    on left: 3 4, on right: 2 4
definition (86)
    on left: 5 6 7, on right: 3 4
annotation_if (87)
    on left: 8 9, on right: 10 11 15 17 19 21 24 25 52 53
declare_struct (88)
    on left: 10 11, on right: 6
identifier_list (89)
    on left: 12 13, on right: 10 11 13
class_definition (90)
    on left: 15 17 19 21, on right: 5
@1 (91)
    on left: 14, on right: 15
@2 (92)
    on left: 16, on right: 17
@3 (93)
    on left: 18, on right: 19
@4 (94)
    on left: 20, on right: 21
protocol_list (95)
    on left: 22 23, on right: 19 21 23
property_definition (96)
    on left: 24 25, on right: 60
property_modifier_list (97)
    on left: 26 27, on right: 24 27
property_modifier (98)
    on left: 28 29, on right: 26 27
property_rc_modifier (99)
    on left: 30 31 32 33, on right: 28
property_atomic_modifier (100)
    on left: 34 35, on right: 29
type_specifier (101)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49,
    on right: 24 25 52 53 59 146 147 148 154 156 157 177
method_definition (102)
    on left: 50 51, on right: 61
instance_method_definition (103)
    on left: 52, on right: 50
class_method_definition (104)
    on left: 53, on right: 51
method_name (105)
    on left: 54 55, on right: 52 53
method_name_1 (106)
    on left: 56, on right: 54
method_name_2 (107)
    on left: 57 58, on right: 55 58
method_name_item (108)
    on left: 59, on right: 57 58
member_definition (109)
    on left: 60 61, on right: 62 63
member_definition_list (110)
    on left: 62 63, on right: 17 21 63
selector (111)
    on left: 64 65, on right: 119 120 132
selector_1 (112)
    on left: 66, on right: 64
selector_2 (113)
    on left: 67 68, on right: 65 68
expression (114)
    on left: 69, on right: 9 123 124 140 157 158 159 160 161 164 165
    168 172 175 176 177 178 182
assign_expression (115)
    on left: 70 71, on right: 69 106 107
assignment_operator (116)
    on left: 72 73 74 75 76 77, on right: 71
ternary_operator_expression (117)
    on left: 78 79 80, on right: 70 71 79 80
logic_or_expression (118)
    on left: 81 82, on right: 78 79 80 82
logic_and_expression (119)
    on left: 83 84, on right: 81 82 84
equality_expression (120)
    on left: 85 86 87, on right: 83 84 86 87
relational_expression (121)
    on left: 88 89 90 91 92, on right: 85 86 87 89 90 91 92
additive_expression (122)
    on left: 93 94 95, on right: 88 89 90 91 92 94 95
multiplication_expression (123)
    on left: 96 97 98 99, on right: 93 94 95 97 98 99
unary_expression (124)
    on left: 100 101 102, on right: 96 97 98 99 101 102
postfix_expression (125)
    on left: 103 104 105, on right: 100
expression_list (126)
    on left: 106 107, on right: 107 120 122 141
dic_entry (127)
    on left: 108, on right: 109 110
dic_entry_list (128)
    on left: 109 110, on right: 110 111
dic (129)
    on left: 111 112, on right: 143
struct_entry (130)
    on left: 113, on right: 114 115
struct_entry_list (131)
    on left: 114 115, on right: 115 116
struct_literal (132)
    on left: 116, on right: 144
primary_expression (133)
    on left: 117 118 119 120 121 122 123 124 125 126 127 128 129 130
    131 132 133 134 135 136 137 138 139 140 141 142 143 144 145,
    on right: 71 103 104 105 108 113 118 119 120 124
block_body (134)
    on left: 146 147 148 149 150 151, on right: 145
function_param_list (135)
    on left: 152 153, on right: 148 151 153
function_param (136)
    on left: 154, on right: 152 153
declaration_statement (137)
    on left: 155, on right: 189 200
declaration (138)
    on left: 156 157, on right: 155 174
if_statement (139)
    on left: 158 159 160 161, on right: 190 201
else_if_list (140)
    on left: 162 163, on right: 160 161 163
else_if (141)
    on left: 164, on right: 162 163
switch_statement (142)
    on left: 165, on right: 191 202
case_list (143)
    on left: 166 167, on right: 165 167
one_case (144)
    on left: 168, on right: 166 167
default_opt (145)
    on left: 169 170, on right: 165
expression_opt (146)
    on left: 171 172, on right: 173 174 181
for_statement (147)
    on left: 173 174, on right: 192 203
while_statement (148)
    on left: 175, on right: 194 205
do_while_statement (149)
    on left: 176, on right: 195 206
foreach_statement (150)
    on left: 177 178, on right: 193 204
continue_statement (151)
    on left: 179, on right: 197
break_statement (152)
    on left: 180, on right: 196
return_statement (153)
    on left: 181, on right: 198
expression_statement (154)
    on left: 182, on right: 199 207
block_statement (155)
    on left: 184 186, on right: 52 53 146 147 148 149 150 151 158 159
    160 161 164 168 170 173 174 175 176 177 178
@5 (156)
    on left: 183, on right: 184
@6 (157)
    on left: 185, on right: 186
statement_list (158)
    on left: 187 188, on right: 186 188
statement (159)
    on left: 189 190 191 192 193 194 195 196 197 198 199,
    on right: 187 188
top_statement (160)
    on left: 200 201 202 203 204 205 206 207, on right: 7


state 0

    0 $accept: . compile_util $end

    IDENTIFIER       shift, and go to state 1
    DOUBLE_LITERAL   shift, and go to state 2
    STRING_LITERAL   shift, and go to state 3
    INTETER_LITERAL  shift, and go to state 4
    SELF             shift, and go to state 5
    SUPER            shift, and go to state 6
    NIL              shift, and go to state 7
    NULL_            shift, and go to state 8
    YES_             shift, and go to state 9
    NO_              shift, and go to state 10
    LP               shift, and go to state 11
    LC               shift, and go to state 12
    AT               shift, and go to state 13
    POWER            shift, and go to state 14
    NOT              shift, and go to state 15
    SUB              shift, and go to state 16
    ANNOTATION_IF    shift, and go to state 17
    STRUCT           shift, and go to state 18
    SELECTOR         shift, and go to state 19
    IF               shift, and go to state 20
    FOR              shift, and go to state 21
    WHILE            shift, and go to state 22
    DO               shift, and go to state 23
    SWITCH           shift, and go to state 24
    VOID             shift, and go to state 25
    BOOL_            shift, and go to state 26
    U_INT            shift, and go to state 27
    INT              shift, and go to state 28
    DOUBLE           shift, and go to state 29
    C_STRING         shift, and go to state 30
    CLASS_           shift, and go to state 31
    SEL_             shift, and go to state 32
    ID               shift, and go to state 33
    POINTER          shift, and go to state 34
    BLOCK            shift, and go to state 35

    $end      reduce using rule 1 (compile_util)
    $default  reduce using rule 8 (annotation_if)

    compile_util                 go to state 36
    definition_list              go to state 37
    definition                   go to state 38
    annotation_if                go to state 39
    declare_struct               go to state 40
    class_definition             go to state 41
    type_specifier               go to state 42
    expression                   go to state 43
    assign_expression            go to state 44
    ternary_operator_expression  go to state 45
    logic_or_expression          go to state 46
    logic_and_expression         go to state 47
    equality_expression          go to state 48
    relational_expression        go to state 49
    additive_expression          go to state 50
    multiplication_expression    go to state 51
    unary_expression             go to state 52
    postfix_expression           go to state 53
    dic                          go to state 54
    struct_literal               go to state 55
    primary_expression           go to state 56
    block_body                   go to state 57
    declaration_statement        go to state 58
    declaration                  go to state 59
    if_statement                 go to state 60
    switch_statement             go to state 61
    for_statement                go to state 62
    while_statement              go to state 63
    do_while_statement           go to state 64
    foreach_statement            go to state 65
    expression_statement         go to state 66
    top_statement                go to state 67


state 1

   47 type_specifier: IDENTIFIER . ASTERISK
   49               | IDENTIFIER .
  117 primary_expression: IDENTIFIER .
  121                   | IDENTIFIER . LP RP
  122                   | IDENTIFIER . LP expression_list RP

    LP        shift, and go to state 68
    ASTERISK  shift, and go to state 69

    IDENTIFIER  reduce using rule 49 (type_specifier)
    ASTERISK    [reduce using rule 117 (primary_expression)]
    $default    reduce using rule 117 (primary_expression)


state 2

  128 primary_expression: DOUBLE_LITERAL .

    $default  reduce using rule 128 (primary_expression)


state 3

  129 primary_expression: STRING_LITERAL .

    $default  reduce using rule 129 (primary_expression)


state 4

  127 primary_expression: INTETER_LITERAL .

    $default  reduce using rule 127 (primary_expression)


state 5

  138 primary_expression: SELF .

    $default  reduce using rule 138 (primary_expression)


state 6

  139 primary_expression: SUPER .

    $default  reduce using rule 139 (primary_expression)


state 7

  130 primary_expression: NIL .

    $default  reduce using rule 130 (primary_expression)


state 8

  131 primary_expression: NULL_ .

    $default  reduce using rule 131 (primary_expression)


state 9

  125 primary_expression: YES_ .

    $default  reduce using rule 125 (primary_expression)


state 10

  126 primary_expression: NO_ .

    $default  reduce using rule 126 (primary_expression)


state 11

  123 primary_expression: LP . expression RP

    IDENTIFIER       shift, and go to state 70
    DOUBLE_LITERAL   shift, and go to state 2
    STRING_LITERAL   shift, and go to state 3
    INTETER_LITERAL  shift, and go to state 4
    SELF             shift, and go to state 5
    SUPER            shift, and go to state 6
    NIL              shift, and go to state 7
    NULL_            shift, and go to state 8
    YES_             shift, and go to state 9
    NO_              shift, and go to state 10
    LP               shift, and go to state 11
    LC               shift, and go to state 12
    AT               shift, and go to state 13
    POWER            shift, and go to state 14
    NOT              shift, and go to state 15
    SUB              shift, and go to state 16
    SELECTOR         shift, and go to state 19

    expression                   go to state 71
    assign_expression            go to state 44
    ternary_operator_expression  go to state 45
    logic_or_expression          go to state 46
    logic_and_expression         go to state 47
    equality_expression          go to state 48
    relational_expression        go to state 49
    additive_expression          go to state 50
    multiplication_expression    go to state 51
    unary_expression             go to state 52
    postfix_expression           go to state 53
    dic                          go to state 54
    struct_literal               go to state 55
    primary_expression           go to state 56
    block_body                   go to state 57


state 12

  116 struct_literal: LC . struct_entry_list RC

    IDENTIFIER  shift, and go to state 72

    struct_entry       go to state 73
    struct_entry_list  go to state 74


state 13

  111 dic: AT . LC dic_entry_list RC
  112    | AT . LC RC
  133 primary_expression: AT . INTETER_LITERAL
  134                   | AT . DOUBLE_LITERAL
  135                   | AT . STRING_LITERAL
  136                   | AT . YES_
  137                   | AT . NO_
  140                   | AT . LP expression RP
  141                   | AT . LB expression_list RB
  142                   | AT . LB RB

    DOUBLE_LITERAL   shift, and go to state 75
    STRING_LITERAL   shift, and go to state 76
    INTETER_LITERAL  shift, and go to state 77
    YES_             shift, and go to state 78
    NO_              shift, and go to state 79
    LP               shift, and go to state 80
    LB               shift, and go to state 81
    LC               shift, and go to state 82


state 14

  146 block_body: POWER . type_specifier LP RP block_statement
  147           | POWER . type_specifier block_statement
  148           | POWER . type_specifier LP function_param_list RP block_statement
  149           | POWER . LP RP block_statement
  150           | POWER . block_statement
  151           | POWER . LP function_param_list RP block_statement

    IDENTIFIER  shift, and go to state 83
    LP          shift, and go to state 84
    LC          shift, and go to state 85
    STRUCT      shift, and go to state 18
    VOID        shift, and go to state 25
    BOOL_       shift, and go to state 26
    U_INT       shift, and go to state 27
    INT         shift, and go to state 28
    DOUBLE      shift, and go to state 29
    C_STRING    shift, and go to state 30
    CLASS_      shift, and go to state 31
    SEL_        shift, and go to state 32
    ID          shift, and go to state 33
    POINTER     shift, and go to state 34
    BLOCK       shift, and go to state 35

    type_specifier   go to state 86
    block_statement  go to state 87


state 15

  101 unary_expression: NOT . unary_expression

    IDENTIFIER       shift, and go to state 70
    DOUBLE_LITERAL   shift, and go to state 2
    STRING_LITERAL   shift, and go to state 3
    INTETER_LITERAL  shift, and go to state 4
    SELF             shift, and go to state 5
    SUPER            shift, and go to state 6
    NIL              shift, and go to state 7
    NULL_            shift, and go to state 8
    YES_             shift, and go to state 9
    NO_              shift, and go to state 10
    LP               shift, and go to state 11
    LC               shift, and go to state 12
    AT               shift, and go to state 13
    POWER            shift, and go to state 14
    NOT              shift, and go to state 15
    SUB              shift, and go to state 16
    SELECTOR         shift, and go to state 19

    unary_expression    go to state 88
    postfix_expression  go to state 53
    dic                 go to state 54
    struct_literal      go to state 55
    primary_expression  go to state 89
    block_body          go to state 57


state 16

  102 unary_expression: SUB . unary_expression

    IDENTIFIER       shift, and go to state 70
    DOUBLE_LITERAL   shift, and go to state 2
    STRING_LITERAL   shift, and go to state 3
    INTETER_LITERAL  shift, and go to state 4
    SELF             shift, and go to state 5
    SUPER            shift, and go to state 6
    NIL              shift, and go to state 7
    NULL_            shift, and go to state 8
    YES_             shift, and go to state 9
    NO_              shift, and go to state 10
    LP               shift, and go to state 11
    LC               shift, and go to state 12
    AT               shift, and go to state 13
    POWER            shift, and go to state 14
    NOT              shift, and go to state 15
    SUB              shift, and go to state 16
    SELECTOR         shift, and go to state 19

    unary_expression    go to state 90
    postfix_expression  go to state 53
    dic                 go to state 54
    struct_literal      go to state 55
    primary_expression  go to state 89
    block_body          go to state 57


state 17

    9 annotation_if: ANNOTATION_IF . LP expression RP

    LP  shift, and go to state 91


state 18

   48 type_specifier: STRUCT . IDENTIFIER

    IDENTIFIER  shift, and go to state 92


state 19

  132 primary_expression: SELECTOR . LP selector RP

    LP  shift, and go to state 93


state 20

  158 if_statement: IF . LP expression RP block_statement
  159             | IF . LP expression RP block_statement ELSE block_statement
  160             | IF . LP expression RP block_statement else_if_list
  161             | IF . LP expression RP block_statement else_if_list ELSE block_statement

    LP  shift, and go to state 94


state 21

  173 for_statement: FOR . LP expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RP block_statement
  174              | FOR . LP declaration SEMICOLON expression_opt SEMICOLON expression_opt RP block_statement
  177 foreach_statement: FOR . LP type_specifier IDENTIFIER IN expression RP block_statement
  178                  | FOR . LP IDENTIFIER IN expression RP block_statement

    LP  shift, and go to state 95


state 22

  175 while_statement: WHILE . LP expression RP block_statement

    LP  shift, and go to state 96


state 23

  176 do_while_statement: DO . block_statement WHILE LP expression RP SEMICOLON

    LC  shift, and go to state 85

    block_statement  go to state 97


state 24

  165 switch_statement: SWITCH . LP expression RP LC case_list default_opt RC

    LP  shift, and go to state 98


state 25

   36 type_specifier: VOID .

    $default  reduce using rule 36 (type_specifier)


state 26

   37 type_specifier: BOOL_ .

    $default  reduce using rule 37 (type_specifier)


state 27

   39 type_specifier: U_INT .

    $default  reduce using rule 39 (type_specifier)


state 28

   38 type_specifier: INT .

    $default  reduce using rule 38 (type_specifier)


state 29

   40 type_specifier: DOUBLE .

    $default  reduce using rule 40 (type_specifier)


state 30

   41 type_specifier: C_STRING .

    $default  reduce using rule 41 (type_specifier)


state 31

   43 type_specifier: CLASS_ .

    $default  reduce using rule 43 (type_specifier)


state 32

   44 type_specifier: SEL_ .

    $default  reduce using rule 44 (type_specifier)


state 33

   42 type_specifier: ID .

    $default  reduce using rule 42 (type_specifier)


state 34

   46 type_specifier: POINTER .

    $default  reduce using rule 46 (type_specifier)


state 35

   45 type_specifier: BLOCK .

    $default  reduce using rule 45 (type_specifier)


state 36

    0 $accept: compile_util . $end

    $end  shift, and go to state 99


state 37

    2 compile_util: definition_list .
    4 definition_list: definition_list . definition

    IDENTIFIER       shift, and go to state 1
    DOUBLE_LITERAL   shift, and go to state 2
    STRING_LITERAL   shift, and go to state 3
    INTETER_LITERAL  shift, and go to state 4
    SELF             shift, and go to state 5
    SUPER            shift, and go to state 6
    NIL              shift, and go to state 7
    NULL_            shift, and go to state 8
    YES_             shift, and go to state 9
    NO_              shift, and go to state 10
    LP               shift, and go to state 11
    LC               shift, and go to state 12
    AT               shift, and go to state 13
    POWER            shift, and go to state 14
    NOT              shift, and go to state 15
    SUB              shift, and go to state 16
    ANNOTATION_IF    shift, and go to state 17
    STRUCT           shift, and go to state 18
    SELECTOR         shift, and go to state 19
    IF               shift, and go to state 20
    FOR              shift, and go to state 21
    WHILE            shift, and go to state 22
    DO               shift, and go to state 23
    SWITCH           shift, and go to state 24
    VOID             shift, and go to state 25
    BOOL_            shift, and go to state 26
    U_INT            shift, and go to state 27
    INT              shift, and go to state 28
    DOUBLE           shift, and go to state 29
    C_STRING         shift, and go to state 30
    CLASS_           shift, and go to state 31
    SEL_             shift, and go to state 32
    ID               shift, and go to state 33
    POINTER          shift, and go to state 34
    BLOCK            shift, and go to state 35

    $end      reduce using rule 2 (compile_util)
    $default  reduce using rule 8 (annotation_if)

    definition                   go to state 100
    annotation_if                go to state 39
    declare_struct               go to state 40
    class_definition             go to state 41
    type_specifier               go to state 42
    expression                   go to state 43
    assign_expression            go to state 44
    ternary_operator_expression  go to state 45
    logic_or_expression          go to state 46
    logic_and_expression         go to state 47
    equality_expression          go to state 48
    relational_expression        go to state 49
    additive_expression          go to state 50
    multiplication_expression    go to state 51
    unary_expression             go to state 52
    postfix_expression           go to state 53
    dic                          go to state 54
    struct_literal               go to state 55
    primary_expression           go to state 56
    block_body                   go to state 57
    declaration_statement        go to state 58
    declaration                  go to state 59
    if_statement                 go to state 60
    switch_statement             go to state 61
    for_statement                go to state 62
    while_statement              go to state 63
    do_while_statement           go to state 64
    foreach_statement            go to state 65
    expression_statement         go to state 66
    top_statement                go to state 67


state 38

    3 definition_list: definition .

    $default  reduce using rule 3 (definition_list)


state 39

   10 declare_struct: annotation_if . DECLARE STRUCT IDENTIFIER LC IDENTIFIER COLON STRING_LITERAL COMMA IDENTIFIER COLON identifier_list RC
   11               | annotation_if . DECLARE STRUCT IDENTIFIER LC IDENTIFIER COLON identifier_list COMMA IDENTIFIER COLON STRING_LITERAL RC
   15 class_definition: annotation_if . CLASS IDENTIFIER COLON IDENTIFIER LC @1 RC
   17                 | annotation_if . CLASS IDENTIFIER COLON IDENTIFIER LC @2 member_definition_list RC
   19                 | annotation_if . CLASS IDENTIFIER COLON IDENTIFIER LT protocol_list GT LC @3 RC
   21                 | annotation_if . CLASS IDENTIFIER COLON IDENTIFIER LT protocol_list GT LC @4 member_definition_list RC

    CLASS    shift, and go to state 101
    DECLARE  shift, and go to state 102


state 40

    6 definition: declare_struct .

    $default  reduce using rule 6 (definition)


state 41

    5 definition: class_definition .

    $default  reduce using rule 5 (definition)


state 42

  156 declaration: type_specifier . IDENTIFIER
  157            | type_specifier . IDENTIFIER ASSIGN expression

    IDENTIFIER  shift, and go to state 103


state 43

  182 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 104


state 44

   69 expression: assign_expression .

    $default  reduce using rule 69 (expression)


state 45

   70 assign_expression: ternary_operator_expression .

    $default  reduce using rule 70 (assign_expression)


state 46

   78 ternary_operator_expression: logic_or_expression .
   79                            | logic_or_expression . QUESTION ternary_operator_expression COLON ternary_operator_expression
   80                            | logic_or_expression . QUESTION COLON ternary_operator_expression
   82 logic_or_expression: logic_or_expression . OR logic_and_expression

    QUESTION  shift, and go to state 105
    OR        shift, and go to state 106

    $default  reduce using rule 78 (ternary_operator_expression)


state 47

   81 logic_or_expression: logic_and_expression .
   84 logic_and_expression: logic_and_expression . AND equality_expression

    AND  shift, and go to state 107

    $default  reduce using rule 81 (logic_or_expression)


state 48

   83 logic_and_expression: equality_expression .
   86 equality_expression: equality_expression . EQ relational_expression
   87                    | equality_expression . NE relational_expression

    EQ  shift, and go to state 108
    NE  shift, and go to state 109

    $default  reduce using rule 83 (logic_and_expression)


state 49

   85 equality_expression: relational_expression .
   89 relational_expression: relational_expression . LT additive_expression
   90                      | relational_expression . LE additive_expression
   91                      | relational_expression . GT additive_expression
   92                      | relational_expression . GE additive_expression

    LT  shift, and go to state 110
    LE  shift, and go to state 111
    GT  shift, and go to state 112
    GE  shift, and go to state 113

    $default  reduce using rule 85 (equality_expression)


state 50

   88 relational_expression: additive_expression .
   94 additive_expression: additive_expression . ADD multiplication_expression
   95                    | additive_expression . SUB multiplication_expression

    SUB  shift, and go to state 114
    ADD  shift, and go to state 115

    $default  reduce using rule 88 (relational_expression)


state 51

   93 additive_expression: multiplication_expression .
   97 multiplication_expression: multiplication_expression . ASTERISK unary_expression
   98                          | multiplication_expression . DIV unary_expression
   99                          | multiplication_expression . MOD unary_expression

    DIV       shift, and go to state 116
    MOD       shift, and go to state 117
    ASTERISK  shift, and go to state 118

    $default  reduce using rule 93 (additive_expression)


state 52

   96 multiplication_expression: unary_expression .

    $default  reduce using rule 96 (multiplication_expression)


state 53

  100 unary_expression: postfix_expression .

    $default  reduce using rule 100 (unary_expression)


state 54

  143 primary_expression: dic .

    $default  reduce using rule 143 (primary_expression)


state 55

  144 primary_expression: struct_literal .

    $default  reduce using rule 144 (primary_expression)


state 56
